<resources>
    <string name="app_name">WordContainer</string>

    <!--Word search strings-->
    <string name="search_hint">Search for a word</string>
    <string name="search_or">or</string>
    <string name="search_favorites">Show favorites</string>
    <string name="title_activity_search_results_actiivty">SearchResultsActiivty</string>

    <!--Database-->
    <string name="no_favorites_available">You haven\'t added any words to your favorites list yet</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="already_favorite">This word is a favorite already</string>
    <string name="save_successful">Saved as favorite</string>

    <!--AdMob test id-->
    <string name="test_ads">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ga_trackingId" translatable="false">@string/tracking_id</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--Widget-->
    <string name="no_preferences">Click to open app to choose a word to display</string>

    <!--Add widget dialogue-->
    <string name="dialogue_title">Word Widget</string>
    <string name="diaglogue_message">Set this word to be displayed on the widget</string>
    <string name="dialogue_accept">OK</string>
    <string name="dialogue_cancel">Cancel</string>
    <string name="dialogue_widget_added">Word added to widget</string>

    <!--Activity titles-->
    <string name="details_title">Definition - %1$s</string>

    <!--Transitions-->
    <string name="list_to_details_transition">list_to_details_transition</string>

    <!--Details Activity-->
    <string name="definition_title">Definition</string>
    <string name="example_title">Example</string>
    <string name="no_definition">There are no definitions for this word</string>

    <!--Content descriptions-->
    <string name="favorites_button">Display favorites</string>
    <string name="add_to_favorites_fab">Add to favorites</string>

    <!--Internet-->
    <string name="no_internet">Check your internet connection and try again please</string>
</resources>
