<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mike.word.container.wordcontainer.ui.MainActivity">

    <EditText
        android:id="@+id/search_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/search_word_margin_bottom"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:hint="@string/search_hint" />

    <TextView
        android:id="@+id/search_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/search_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/search_or" />

    <Button
        android:id="@+id/display_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_margin_top"
        app:layout_constraintTop_toBottomOf="@id/search_or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/search_favorites"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/test_ads"/>

</android.support.constraint.ConstraintLayout>
